@@ -52,6 +52,21 @@ Add the dependency with sbt:
 libraryDependencies += "org.apache.fory" %% "fory-scala" % "1.1.0"
 ```
 
+### JDK25+
+
+Scala uses the Fory Java core at runtime. On JDK25+, open `java.lang.invoke` to
+Fory. Use `ALL-UNNAMED` when Fory is on the classpath:
+
+```bash
+--add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+```
+
+Use the Fory core module name when Fory is on the module path:
+
+```bash
+--add-opens=java.base/java.lang.invoke=org.apache.fory.core
+```
+
 ## Quick Start
 
 ```scala
